<resources>
    <string name="app_name">WaterFilter</string>
    <string name="login">Kirish</string>
    <string name="username">Foydalanuvchi nomi</string>
    <string name="password">Parol</string>
    <string name="location">Joylashuv</string>
    <string name="service">Xizmat ko`rsatish</string>
    <string name="FullName">F.I.O</string>
    <string name="PhoneNumber">Telefon raqami</string>
    <string name="Address">Manzil</string>
    <string name="call">Chaqirish</string>
    <string name="clients">Mijozlar</string>
    <string name="clientsDesc">Bugun sizga xizmat ko`rsatish uchun biriktirilgan mijozlar ro`yxati</string>
    <string name="settings">Sozlanmalar</string>
    <string name="settingsDesc">Sozlanmalaringizni o`zgartirishingiz mumkin</string>
    <string name="api_base_url">http://rgd.amusoft.uz/api/</string>
    <string name="title_home">Asosiy</string>
    <string name="title_history">Tarix</string>
    <string name="title_products">Mahsulotlar</string>
    <string name="title_settings">Sozlanmalar</string>

    <!--                          TASK-->

    <string name="filter_data">FILTR MA`LUMOTLARI</string>
    <string name="filter_name">Model</string>
    <string name="filter_expire_date">Filtr almashtirish sanasi</string>
    <string name="filter_expire">Filtr almashtirish oralig`i</string>
    <string name="filter_installation_date">O`rnatilgan sana</string>

    <string name="client_data">MIJOZ MA`LUMOTLARI</string>
    <string name="client_name">Ismi</string>
    <string name="client_phone">Telefon</string>
    <string name="client_desc">Mijoz haqida</string>

    <string name="services">SERVISLAR</string>
    <string name="service_name">Servis nomi</string>
    <string name="service_cost">Servis narxi</string>
    <string name="poin_location">Filtr joylashuvi</string>
    <string name="poin_location_btn">Ko`rish</string>
    <string name="set_laction_text">Joylashuv belgilanmagan iltimos joylashuvni belgilang</string>
    <string name="set_location_btn">Joylashuvni belgilash</string>
    <string name="set_laction_about_text">Mijoz joylashuvini belgilang!</string>
    <string name="text_delete">O`chirish</string>
    <string name="is_free_text">Pullikmi?</string>
    <string name="product_name">Mahsulot nomi</string>
    <string name="product_price">Mahsulot narxi</string>
    <string name="add_service_btn_text">Servis qo`shish</string>
    <string name="complete_task">Ishni yakunlash</string>
    <string name="sms_activity_titel">Quyidagi raqamga yuborilgan kodni kiriting</string>
    <string name="example_phone">914285153</string>
    <string name="resend_sms_btn_text">Qayta yuborish</string>
    <string name="continue_btn_text">Davom etish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="productsDesc">Sizda mavjud mahsulotlar ro`yxati</string>
    <string name="historyDesc">Tugatgan ishlaringiz ro`yxati</string>
    <string name="select_day_text">Kunni tanlash</string>
    <string name="product_type">product type</string>
</resources>