<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <!--            POINT LOCATION-->
            <!-- Client set location -->
            <LinearLayout
                android:id="@+id/locationSetAboutLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/setLoctionAboutTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/set_laction_about_text"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/purple"
                    android:gravity="center"
                    android:padding="16dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/locationSetLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setLoctionTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/set_laction_text"
                    android:gravity="start"
                    android:padding="8dp"/>

                <Button
                    android:id="@+id/setLoctionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_location_btn"
                    android:layout_gravity="end"
                    android:padding="8dp"/>

            </LinearLayout>

            <!--            CLIENT DATA-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/client_data"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/purple"
                    android:gravity="center"
                    android:padding="16dp"/>
            </LinearLayout>
            <!-- Client name -->
            <LinearLayout
                android:id="@+id/clientNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/client_name"
                    android:gravity="start"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/clientNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/client_name"
                    android:layout_gravity="end"
                    android:padding="8dp"/>

            </LinearLayout>

            <!-- Client phone -->
            <LinearLayout
                android:id="@+id/clientPhoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/client_phone"
                    android:gravity="start"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/clientPhoneTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/client_phone"
                    android:layout_gravity="end"
                    android:padding="8dp"/>

            </LinearLayout>

            <!-- Client description -->
            <LinearLayout
                android:id="@+id/clientDescLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/client_desc"
                    android:gravity="start"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/clientDescTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/client_desc"
                    android:layout_gravity="end"
                    android:padding="8dp"/>

            </LinearLayout>

            <!--            POINT DATA-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_data"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/purple"
                    android:gravity="center"
                    android:padding="16dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/pointLocationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/poin_location"
                    android:gravity="center_vertical"
                    android:padding="8dp"/>

                <Button
                    android:id="@+id/pointLocationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poin_location_btn"
                    android:layout_gravity="end"
                    android:padding="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_name"
                    android:gravity="center_vertical"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/pointModelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_name"
                    android:layout_gravity="end"
                    android:padding="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_expire_date"
                    android:gravity="center_vertical"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/pointExpireDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_expire_date"
                    android:layout_gravity="end"
                    android:padding="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_expire"
                    android:gravity="center_vertical"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/pointExpireTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_expire"
                    android:layout_gravity="end"
                    android:padding="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_installation_date"
                    android:gravity="center_vertical"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/pointInstallationDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_installation_date"
                    android:layout_gravity="end"
                    android:padding="8dp"/>

            </LinearLayout>
            <!--            POINT DATA-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/services"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/purple"
                    android:gravity="center"
                    android:padding="16dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
